--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,9 +20,12 @@
 
         <div class="navbar-menu">
           <div class="navbar-start">
-            <%= link_to "Sign In", "/changelater", class: "navbar-item" %>
-            <%= link_to "Sign Up", "/changelater", class: "navbar-item" %>
-            <%= link_to "Log Out", "/changelater", method: "delete", class: "navbar-item" %>
+            <% if current_user %>
+              <%= link_to "Log Out", destroy_user_session_path, method: "delete", class: "navbar-item" %>
+            <% else %>
+              <%= link_to "Sign Up", new_user_registration_path, class: "navbar-item" %>
+              <%= link_to "Sign In", new_user_session_path, class: "navbar-item" %>
+            <% end %>
           </div>
         </div>
 
